<resources>
    <string name="app_name">SunShine App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_day_details">DayDetails</string>

    <string name="prefrences_location_key">location</string>
    <string name="prefrences_location_title">Location</string>
    <string name="prefrences_location_default">Cairo</string>
    <string name="prefrences_location_summary">Enter the city you want to show the forecast for</string>

    <string name="prefrences_units_key">units</string>
    <string name="prefrences_units_title">Units</string>
    <string name="prefrences_units_summary">Choose the units Celsius or Fahrenheit</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="share">Share</string>


</resources>
